--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello Universe</h1>
+<h1>Hello Universe!</h1>
 <p>My project will go here...</p>
 </body>
 </html>
